# transcrissor_pdf

./: .gitignore  Dockerfile  docker-compose.local.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: main.py
app/auth/: hash_handler.py  jwt_handler.py
app/core/: paths.py
app/db/: indexes.py  mongo.py
app/models/: aula.py  materia.py  pdf.py  usuario.py
app/routes/: aulas.py  auth_routes.py  eventos.py  materias.py  sse.py
app/services/: audio_generator.py  ia_service.py  ownership.py  pdf_extractor.py  text_cleaner.py  tts_service.py
app/sse/: event_queue.py
app/tasks/: audio.py  celery_app.py
app/utils/: tratar_texto.py
docker/mongo/: docker-compose.yml
docker/mongo/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-405649034971257816.wt  collection-2-405649034971257816.wt  collection-7-405649034971257816.wt  index-1-405649034971257816.wt  index-3-405649034971257816.wt  index-8-405649034971257816.wt  index-9-405649034971257816.wt  sizeStorer.wt
docker/mongo/data/.mongodb/mongosh/: 686a3341c4d4404885baa8b8_log  686a3342371ab70561baa8b8_log  config
docker/mongo/data/diagnostic.data/: metrics.2025-07-06T08-26-41Z-00000
docker/mongo/init/: init-user.js
tests/: conftest.py  test_flow.py
