[project]
name = "transcrissor-pdf"
version = "0.1.0"
description = ""
authors = [
    {name = "Nivaldo Ferreira de Souza Junior",email = "nivaldofe.jr@gmail.com"}
]

package-mode = false

requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "motor (>=3.7.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "gtts (>=2.5.4,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydub (>=0.25.1,<0.26.0)",
    "celery (>=5.5.3,<6.0.0)",
    "edge-tts (>=7.2.0,<8.0.0)",
    "google-cloud-texttospeech (>=2.27.0,<3.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "redis (>=6.4.0,<7.0.0)",
    "sse-starlette (>=3.0.2,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
